force-app/main/default/objects/InsurancePolicy/InsurancePolicy.object-meta.xml
<CustomObject>
    <!--    <compactLayoutAssignment>Insurance_Sample</compactLayoutAssignment>
-->
    <!---->
    <sharingModel>Read</sharingModel>
</CustomObject>