force-app/main/default/objects/InsurancePolicy/fields/Aswata_Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Aswata_Policy_Number__c</fullName>
    <externalId>true</externalId>
    <label>Aswata Policy Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>