force-app/main/default/objects/InsurancePolicy/fields/Customer_Decision__c.field-meta.xml
<CustomField>
    <fullName>Customer_Decision__c</fullName>
    <label>Customer Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>