force-app/main/default/objects/InsurancePolicy/fields/Escalate__c.field-meta.xml
<CustomField>
    <fullName>Escalate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Escalate</label>
    <type>Checkbox</type>
</CustomField>