force-app/main/default/objects/InsurancePolicy/fields/Facultative__c.field-meta.xml
<CustomField>
    <fullName>Facultative__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Facultative</label>
    <type>Checkbox</type>
</CustomField>