force-app/main/default/objects/InsurancePolicy/fields/is_Active__c.field-meta.xml
<CustomField>
    <fullName>is_Active__c</fullName>
    <formula>EffectiveToDate   &gt;= TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>is Active</label>
    <type>Checkbox</type>
</CustomField>