force-app/main/default/objects/InsurancePolicy/fields/Is_Leasing__c.field-meta.xml
<CustomField>
    <fullName>Is_Leasing__c</fullName>
    <label>Is Leasing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>