force-app/main/default/objects/InsurancePolicy/fields/Lintaswata_Currency__c.field-meta.xml
<CustomField>
    <fullName>Lintaswata_Currency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lintaswata Currency</label>
    <referenceTo>Master_Data__c</referenceTo>
    <relationshipLabel>Insurance Policies (Currency)</relationshipLabel>
    <relationshipName>Insurance_Policies1</relationshipName>
    <type>Lookup</type>
</CustomField>