force-app/main/default/objects/InsurancePolicy/fields/MARKETER_ID__c.field-meta.xml
<CustomField>
    <fullName>MARKETER_ID__c</fullName>
    <label>MARKETER ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>