force-app/main/default/objects/InsurancePolicy/fields/NameInsured__c.field-meta.xml
<CustomField>
    <fullName>NameInsured__c</fullName>
    <formula>IF(NameInsured.Name != &apos;&apos;, NameInsured.Name, NameInsured.FirstName + &apos; &apos; + NameInsured.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NameInsured</label>
    <type>Text</type>
</CustomField>