force-app/main/default/objects/InsurancePolicy/fields/Notice_ID__c.field-meta.xml
<CustomField>
    <fullName>Notice_ID__c</fullName>
    <description>id notice SFAWT 3 &amp; 4</description>
    <label>Notice ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>