force-app/main/default/objects/InsurancePolicy/fields/Os_Payment__c.field-meta.xml
<CustomField>
    <fullName>Os_Payment__c</fullName>
    <label>Os Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>