force-app/main/default/objects/InsurancePolicy/fields/PIC__c.field-meta.xml
<CustomField>
    <fullName>PIC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PIC</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Insurance Policies (PIC)</relationshipLabel>
    <relationshipName>Insurance_Policies1</relationshipName>
    <type>Lookup</type>
</CustomField>