force-app/main/default/objects/InsurancePolicy/fields/Policy_Distribution__c.field-meta.xml
<CustomField>
    <fullName>Policy_Distribution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Policy Distribution</label>
    <referenceTo>Master_Data__c</referenceTo>
    <relationshipLabel>Insurance Policies</relationshipLabel>
    <relationshipName>Insurance_Policies</relationshipName>
    <type>Lookup</type>
</CustomField>