force-app/main/default/objects/InsurancePolicy/fields/QQ__c.field-meta.xml
<CustomField>
    <fullName>QQ__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QQ</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Insurance Policies (QQ)</relationshipLabel>
    <relationshipName>Insurance_Policies2</relationshipName>
    <type>Lookup</type>
</CustomField>