force-app/main/default/objects/InsurancePolicy/fields/Renewal_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Milestone__c</fullName>
    <formula>IF ( Count_Renewal__c &gt; 30, &apos;Incoming Renewal&apos;,
IF ( Count_Renewal__c = 30, &apos;Renewal H-30&apos;,
IF ( Count_Renewal__c &gt; 15, &apos;Incoming H-15&apos;,
IF ( Count_Renewal__c = 15, &apos;Renewal H-15&apos;,
IF ( Count_Renewal__c &gt; -14, &apos;Over H+14&apos;,
IF ( Count_Renewal__c = -14, &apos;Reminder H+14&apos;,&apos;&apos;))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal Milestone</label>
    <type>Text</type>
</CustomField>