force-app/main/default/objects/InsurancePolicy/fields/Set_Email__c.field-meta.xml
<CustomField>
    <fullName>Set_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Set Email</label>
    <type>Checkbox</type>
</CustomField>