force-app/main/default/objects/InsurancePolicy/fields/Set_Notif_1__c.field-meta.xml
<CustomField>
    <fullName>Set_Notif_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Set Notif 1</label>
    <type>Checkbox</type>
</CustomField>