force-app/main/default/objects/InsurancePolicy/fields/Set_Task__c.field-meta.xml
<CustomField>
    <fullName>Set_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Set Task</label>
    <type>Checkbox</type>
</CustomField>