force-app/main/default/objects/InsurancePolicy/fields/Status_Notice__c.field-meta.xml
<CustomField>
    <fullName>Status_Notice__c</fullName>
    <label>Status Notice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>31500</fullName>
                <label>Renewal</label>
            </value>
            <value>
                <fullName>31100</fullName>
                <label>Renewal Overlimit HO Agrement</label>
            </value>
            <value>
                <fullName>31200</fullName>
                <label>Recall Non Renewal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>