force-app/main/default/objects/InsurancePolicy/fields/Status_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Status_Renewal__c</fullName>
    <label>Status Renewal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Agree</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Agree withh Adjustment</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Non Renewal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>