force-app/main/default/objects/InsurancePolicy/fields/Total_Premi__c.field-meta.xml
<CustomField>
    <fullName>Total_Premi__c</fullName>
    <label>Total Premi</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>