force-app/main/default/objects/InsurancePolicy/listViews/Customer_Care_InsurancePolicy.listView-meta.xml
<ListView>
    <fullName>Customer_Care_InsurancePolicy</fullName>
    <filterScope>Queue</filterScope>
    <label>Customer Care</label>
    <queue>Customer_Care</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>