force-app/main/default/objects/InsurancePolicy/listViews/Energy_Risk_Facultative_Staff_InsurancePolicy.listView-meta.xml
<ListView>
    <fullName>Energy_Risk_Facultative_Staff_InsurancePolicy</fullName>
    <filterScope>Queue</filterScope>
    <label>Energy Risk Facultative</label>
    <queue>Energy_Risk_Facultative_Staff</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>