force-app/main/default/objects/InsurancePolicy/listViews/Facultative_CP_Area_Tengah_InsurancePolicy.listView-meta.xml
<ListView>
    <fullName>Facultative_CP_Area_Tengah_InsurancePolicy</fullName>
    <filterScope>Queue</filterScope>
    <label>Facultative CP Area Tengah</label>
    <queue>Facultative_CP_Area_Tengah</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>