force-app/main/default/objects/InsurancePolicy/listViews/Facultative_CP_Area_Timur_InsurancePolicy.listView-meta.xml
<ListView>
    <fullName>Facultative_CP_Area_Timur_InsurancePolicy</fullName>
    <filterScope>Queue</filterScope>
    <label>Facultative CP Area Timur</label>
    <queue>Facultative_CP_Area_Timur</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>