force-app/main/default/objects/InsurancePolicy/listViews/Finance_Facultative_InsurancePolicy.listView-meta.xml
<ListView>
    <fullName>Finance_Facultative_InsurancePolicy</fullName>
    <filterScope>Queue</filterScope>
    <label>Finance Facultative</label>
    <queue>Finance_Facultative</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>