force-app/main/default/objects/InsurancePolicy/listViews/Heavy_Equipment_Facultative_InsurancePolicy.listView-meta.xml
<ListView>
    <fullName>Heavy_Equipment_Facultative_InsurancePolicy</fullName>
    <filterScope>Queue</filterScope>
    <label>Heavy Equipment Facultative</label>
    <queue>Heavy_Equipment_Facultative</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>