force-app/main/default/objects/InsurancePolicy/listViews/Marine_Aviation_Facultative_InsurancePolicy.listView-meta.xml
<ListView>
    <fullName>Marine_Aviation_Facultative_InsurancePolicy</fullName>
    <filterScope>Queue</filterScope>
    <label>Marine &amp; Aviation Facultative</label>
    <queue>Marine_Aviation_Facultative</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>