force-app/main/default/objects/InsurancePolicy/listViews/Policy_Processing_Agency_Office_InsurancePolicy.listView-meta.xml
<ListView>
    <fullName>Policy_Processing_Agency_Office_InsurancePolicy</fullName>
    <filterScope>Queue</filterScope>
    <label>Policy Processing Agency Office</label>
    <queue>Policy_Processing_Agency_Office</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>