force-app/main/default/objects/InsurancePolicy/listViews/Policy_Processing_Bandung_InsurancePolicy.listView-meta.xml
<ListView>
    <fullName>Policy_Processing_Bandung_InsurancePolicy</fullName>
    <filterScope>Queue</filterScope>
    <label>Policy Processing Bandung</label>
    <queue>Policy_Processing_Bandung</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>